Forgot to add pytest

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 appdirs==1.4.4
+atomicwrites==1.4.0
+attrs==20.3.0
 backcall==0.2.0
 certifi==2020.11.8
 cffi==1.14.4
@@ -6,6 +8,8 @@ colorama==0.4.4
 cycler==0.10.0
 decorator==4.4.2
 distlib==0.3.0
+importlib-metadata==3.3.0
+iniconfig==1.1.1
 ipdb==0.13.4
 ipython==7.19.0
 ipython-genutils==0.2.0
@@ -15,18 +19,25 @@ matplotlib==3.3.3
 mip==1.13.0
 networkx==2.5
 numpy==1.19.4
+packaging==20.8
 pandas==1.1.4
 parso==0.7.1
 pickleshare==0.7.5
 Pillow==8.0.1
+pluggy==0.13.1
 prompt-toolkit==3.0.8
+py==1.10.0
 pycparser==2.20
 Pygments==2.7.2
 pyparsing==2.4.7
+pytest==6.2.1
 python-dateutil==2.8.1
 pytz==2020.4
 six==1.15.0
+toml==0.10.2
 traitlets==5.0.5
+typing-extensions==3.7.4.3
 virtualenv-clone==0.5.4
 wcwidth==0.2.5
 wincertstore==0.2
+zipp==3.4.0
